# MSPatchUpdate

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/meishe/mshotfix/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: new.apk  old.apk  patch.apk
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/meishe/mshotfix/: MSPatchUtils.java  MainActivity.java
app/src/main/java/com/meishe/patchupdate/: MSPatchUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/meishe/mshotfix/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
